cleaned up images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="side_nav_item" id="collegebacker">collegebacker</div>
     <div class="side_nav_item" id="tesla">tesla</div>
     <div class="side_nav_item" id="orai">orai</div>   
-    <div class="side_nav_item" id="cabinet">cabinet</div> 
+    <div class="side_nav_item" id="cabinet">cabinet</div>
+    <div class="side_nav_item" id="evios">evios</div> 
     <br><br>
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
