--- a/orai.html
+++ b/orai.html
@@ -27,6 +27,7 @@
     <div class="side_nav_item" id="resume" style="text-decoration: underline;">resume</div>
   </div>
     <br><br>
+    <img class="visuals" style="width:30%;margin= auto 0" src="Work_Documentation/Orai/Orai.png">
     <h2 class="subtitle">overview</h2>
     <p class="content"><a href="https://oraiapp.com">Orai</a> is a mobile communication coach that empowers users to become stronger, more confident communicators through interactive lessons, tips, and assessments. We were a small team of fewer than 20 people based primarily in Philadelphia, USA, but with various teammates scattered around the globe. I was laid off in June 2019 due to the team's financial shortcomings. </p>
     <h2 class="subtitle">what I did</h2>
@@ -37,14 +38,14 @@
     <p class="content">
     <a href="https://trainingindustry.com/articles/content-development/knowledge-retention-tactics-for-more-effective-learning"> Research</a> demonstrates that repeated, consistent exposure to concepts is the most effective method for strengthening learning retention. I examined popular and effective learning apps to identify how they employed different methods to encourage users to return.</p><br>
     <p class="content">Our understanding of learning science served as the foundation for the redesign and informed our approach, which exposed users to consistent material in short doses throughout the day and encouraged regular practice.</p>
-    <img class="visuals" src="Work_Documentation/Orai_Weekly.png">
+    <img class="visuals" src="Work_Documentation/Orai/Orai_Weekly.png">
     <p class="content">I conducted user interviews with existing users - both within our enterprise client teams and individual users - to learn more about our users' learning objectives. I learned that users were eager to learn new content, but exhausted material too quickly. They would 'binge' the app but found little reason to return after they finished their lessons. While we loved that users were so excited by the content that they would exhaust the lessons so quickly, we also recognized the importance of practicing material and refining skills. As such, we decided to introduce cadence setting.</p>
-    <img class="visuals" src="Work_Documentation/Orai_Daily.png">
+    <img class="visuals" src="Work_Documentation/Orai/Orai_Daily.png">
     <p class="content">While the original experience allowed users to pick and choose from an open collection of lessons, the new approach was regimented - users would complete a quiz as part of their onboarding to better determine their personal learning objectives. From there, their results would determine which lesson pack was most appropriate for their learning goals. The lesson packs were designed to span 5-days and included a combination of new material and reinforcing learned content.</p>
 <!--     <img class="visuals" src="Work_Documentation/Cadence_lesson.jpg">
  -->    <p class="content">I created an animated mock-up to demonstrate interaction and flow.</p>
      <video class="visuals" width="50%" height="50%" controls>
-        <source src="Work_Documentation/Cadence_v1.mp4">
+        <source src="Work_Documentation/Orai/Cadence_v1.mp4">
     </video>
     <h2 class="subtitle">looking ahead</h2>
     <p class="content">My time at Orai was cut short shortly after the experience redesign was moved to development. I wish the best to the Orai team as they move ahead and look forward to where they go in the future.</p>
